--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-    "name": "avocado",
-    "version": "0.0.1",
-    "description": "Chromecast video player in Electron",
-    "main": "main.js",
-    "scripts": {
-        "start": "electron ."
-    },
-    "keywords": [
-        "electron",
-        "chromecast"
-    ],
-    "author": "agtraveso",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/alvarogtraveso/avocado.git"
-    },
-    "license": "MIT",
-    "devDependencies": {
-        "castv2-client": "^1.1.2",
-        "electron-rebuild": "^1.3.0",
-        "internal-ip": "^1.2.0",
-        "mdns": "^2.3.3",
-        "mime": "^1.3.4",
-        "range-parser": "^1.2.0"
-    },
-    "dependencies": {
-        "electron": "^1.4.7"
-    }
+  "name": "avocado",
+  "version": "0.0.1",
+  "description": "Chromecast video player in Electron",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "keywords": [
+    "electron",
+    "chromecast"
+  ],
+  "author": "agtraveso",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alvarogtraveso/avocado.git"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "castv2-client": "^1.1.2",
+    "electron-rebuild": "^1.3.0",
+    "internal-ip": "^1.2.0",
+    "mdns": "^2.3.3",
+    "mime": "^1.3.4",
+    "range-parser": "^1.2.0",
+    "srt2vtt": "^1.3.1"
+  },
+  "dependencies": {
+    "electron": "^1.4.7"
+  }
 }
