--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "babel-preset-react": "^6.16.0",
     "castv2-client": "^1.1.2",
     "css-loader": "^0.26.0",
-    "electron-rebuild": "^1.3.0",
+    "electron-rebuild": "^1.4.0",
     "internal-ip": "^1.2.0",
     "mdns": "^2.3.3",
     "mime": "^1.3.4",
     "node-sass": "^3.13.0",
     "range-parser": "^1.2.0",
     "react-dropzone": "^3.7.3",
+    "rc-slider": "^5.3.5",
     "sass-loader": "^4.0.2",
     "srt2vtt": "^1.3.1",
     "style-loader": "^0.13.1",
