--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dropzone": "^3.7.3",
     "srt2vtt": "^1.3.1",
     "webpack": "^1.13.3",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-node-externals": "^1.5.4",
+    "opensubtitles-api": "3.3.0"
   },
   "dependencies": {
     "electron": "^1.4.7",
