--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "castv2-client": "^1.1.2",
+    "css-loader": "^0.26.0",
     "electron-rebuild": "^1.3.0",
     "internal-ip": "^1.2.0",
     "mdns": "^2.3.3",
     "mime": "^1.3.4",
+    "node-sass": "^3.13.0",
     "range-parser": "^1.2.0",
     "react-dropzone": "^3.7.3",
+    "sass-loader": "^4.0.2",
     "srt2vtt": "^1.3.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-node-externals": "^1.5.4"
   },
